<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Islamic Guidance</string>
    <string name="contribution">Contributed by: </string>
    <string name="defaultlang">en</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share_ramdan">Know the Ramadan 2020 - Sehr and Iftar timing of your location by this amazing app:  https://goo.gl/SrxTuR</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dua">DuaActivity</string>
    <string name="ad_id_interstitial">ca-app-pub-1987009688740263/5550707751</string>
    <string name="customLoadingIcon">&#xe807;</string>
    <string name="customPlayIcon">&#xe802;</string>
    <string name="customStopIcon">&#xe803;</string>
    <string name="DUA_BANNER_AD">ca-app-pub-1987009688740263/4785131435</string>
    <string name="FRONT_BANNER_AD">ca-app-pub-1987009688740263/8560014477</string>
    <string name="KALIMA_BANNER_AD">ca-app-pub-1987009688740263/7055361110</string>
    <string name="ADMOB_APP_ID">ca-app-pub-1987009688740263~6153342986</string>
    <string name="downloads">Downloads</string>
    <string name="english" translatable="false">English</string>
    <string name="view_all">View All</string>
    <string name="qibla_direction">Qibla direction from North:</string>
    <string name="qibla_instructions">Note: You might need to move the device in a circular motion to reset the compass</string>
    <string name="hello_world">Hello world!</string>
    <string name="hajj_text">Hajj &amp; Ummrah</string>
    <string name="arabic_shadat_text">ašhadu ʾalā ʾilāha ʾilla -llāhu, wa-ʾašhadu \n ʾanna muḥammadan rasūlu -llāh</string>
    <string name="english_shadat_text">I bear witness that there is no deity \n but God, and I bear witness that \n Muhammad is the Messenger of God.</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="zuhr">Zuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="button_prev">\u2190 Previous</string>
    <string name="button_next">Next \u2192</string>
    <string name="button_done">Done</string>
    <string name="button_alarm_on">Turn on alarm \u2192</string>
    <string name="button_alarm_off">Turn off alarm \u2192</string>
    <plurals name="button_alarm">
        <item quantity="one">@string/button_alarm_on</item>
        <item quantity="other">@string/button_alarm_off</item>
    </plurals>
    <string name="config_title">Please take a moment to configure the Salaat times to your requirements.</string>
    <string name="explain_default_config">
        By default Salaat times are configured using Muslim World League calculation
        method, Shafii Juristic for Asr time calculations and makes no adjustment
        for people living in higher latitudes.\n\n
        Other calculation methods include: Karachi, ISNA, Makkah, Egypt, Tehran, Jafri\n\n
        You can choose to use the default settings (don\'t worry you can change them later), or
        configure the Salaat times to your requirements below.
    </string>
    <string name="calc_method">Calculation Method</string>
    <string name="calc_method_explain">
        Please select the calculation method for Salaat in your area.
        Muslim World League should work for most people.
    </string>
    <string name="asr_method">Asr Juristic</string>
    <string name="asr_method_explain">
        Shafii is the standard most often used. Please select the method that best suits you.
        If you are not sure, leave Shafii selected, you can always change it later.
    </string>
    <string name="title_onboarding_calc_method">Configure Prayer Times</string>
    <string name="button_configure_now">Configure settings now \u2192</string>
    <string name="button_use_default">Use default settings \u2192</string>
    <string name="calc_method_karachi">KARACHI - University of Islamic Sciences</string>
    <string name="calc_method_isna">ISNA - Islamic Society of North America</string>
    <string name="calc_method_mwl">MWL - Muslim World League</string>
    <string name="calc_method_makkah">MAKKAH - Umm al-Qura</string>
    <string name="calc_method_egypt">EGYPT - Egyptian General Authority of Survey</string>
    <string name="calc_method_tehran">TEHRAN - Institute of Geophysics, University of Tehran</string>
    <string name="calc_method_jafari">JAFARI - Ithna Ashari</string>
    <string name="asr_method_shafii">Shafii (Standard)</string>
    <string name="asr_method_hanfi">Hanfi</string>
    <string name="time_title">Time format</string>
    <string name="time_12">12 hours (Example: 01:00 pm)</string>
    <string name="time_24">24 hours (Example: 13:00)</string>
    <string name="high_latitude">High latitude adjustment</string>
    <string name="high_latitude_explain">
        For people living in higher latitudes, the prayer times can be incorrect.
        If the prayer times seem incorrect, try changing this value.\n\n
        During the summer months One-Seventh method produces a later Fajr time than
        Angle based method. If you perfer Angle based method, please change below.
    </string>
    <string name="high_lat_none">None</string>
    <string name="high_lat_midnight">Midnight</string>
    <string name="high_lat_one_seventh">One-seventh of night</string>
    <string name="high_lat_angle_based">Angle based</string>
    <string name="label_compass_orientation">This feature uses the compass in your phone to point you in the correct direction. The compass can be unreliable indoors so if the results look incorrect, we recommend orienting your phones compass by performing the following steps.</string>
    <string name="label_dont_show_again">Don\'t show again</string>
    <string name="title_compass_orientation">Compass orientation</string>
    <string name="button_okay">Okay</string>
    <string name="button_retry">Retry</string>
    <string name="error_permission_location">
        Your location is used to calculate Salaat times.\n
        Click \'Okay\' to grant permission to access your location.
    </string>
    <string name="error_setting_location">
        Your location in GPS coordinates is used to calculate Salaat times.\n
        Without this, Salaat times will not be visible.
    </string>
    <string name="salaat_times">Salaat times</string>
    <string name="kaaba_position">Kaaba position</string>
    <string name="current_location">Current location</string>
    <string name="kaaba">Kaaba</string>
    <string name="permission_write_external_required">
        Kaaba locator requires Google Maps which requires permission to write to external storage.\n\n
        If you click \'continue\', you will be prompted to grant permissions to write to external storage.
    </string>
    <string name="button_continue">Continue \u2192</string>
    <string name="turn_off_alarm">Turn off alarm</string>
    <string name="turn_on_alarm">Turn on alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="prayer_name_time">%s time.</string>
    <string name="notification_body">It is time for %s prayers.</string>
    <string name="alarm_timed_out">%s Alarm timed out after 5 minutes.</string>
    <string name="alarm_timed_out_only">Alarm timed out after 5 minutes.</string>
    <string name="alarm_interrupted">Alarm interrupted</string>
    <string name="alarm_interrupted_body">alarm interrupted by an other app or phone call.</string>
    <string name="suhoor_is_close">Suhoor is close.</string>
    <string name="iftar_is_close">Iftar is close.</string>
    <string name="set_alarm_ascending_explain">Volume starts off low and increases every 10 seconds to gently wake you up.</string>
    <string name="set_alarm_ascending">Ascending volume alarm/Adhan</string>
    <string name="set_alarm_ringtone_options">Ringtone options</string>
    <string name="set_alarm_notify_before_iftar">Notify me before Iftar</string>
    <string name="set_alarm_notify_before_suhoor">Notify me before Suhoor</string>
    <string name="set_alarm_ramadan_explain">Be notified before Suhoor or Iftar and display prayers in the alarm screen.\nThis option is only available if alarm is turned on.</string>
    <string name="set_alarm_ramadan">Turn on Ramadan options</string>
    <string name="set_alarm_select_ringtone">Select a ringtone (Current: %s)</string>
    <string name="set_alarm_random_ringtone">Random alarm ringtone</string>
    <string name="set_alarm_use_adhan">Play Adhan instead of alarm ringtone</string>
    <string-array name="alarm_before">
        <item>Off</item>
        <item>15 mins</item>
        <item>30 mins</item>
        <item>45 mins</item>
        <item>1 hour</item>
    </string-array>
    <string name="suhoor_dua">Suhoor dua</string>
    <string name="prayer_sehri">وَبِصَوْمِ غَدٍ نَّوَيْتَ مِنْ شَهْرِ رَمَضَانَ</string>
    <string name="prayer_sehri_en">Wa bi-sawmi ghadin nawaytu min shahri ramadan</string>
    <string name="prayer_sehri_translation">I intend to keep the fast for tomorrow in the month of Ramadan.</string>
    <string name="iftar_dua">Iftar dua</string>
    <string name="prayer_iftar">\u200F اِنِّى لَكَ صُمْتُ وَبِكَ امنْتُ وَ عَلى رِزْقِكَ اَفْطَرْتُ</string>
    <string name="prayer_iftar_en">Allahumma Inni laka sumtu wa bika amantu [wa alayka tawakkalto] wa ‘ala rizqika aftartu</string>
    <string name="prayer_iftar_translation">O Allah! I fasted for You and I believe in You and I break my fast with Your sustenance</string>
    <string name="title_terms_and_conditions">Terms and Conditions</string>
    <string name="action_accept">Accept</string>
    <string name="secret_google_maps_api_key"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download_format">Completed: %s\nDownloaded: %s\nTotal Size: %s</string>
    <string name="downloading">Downloading %s</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="homepage_medium_ad">525695824893690_829831974480072</string>
    <string name="naat_medium_ad">525695824893690_682826562513948</string>
    <string name="naat_full_page">525695824893690_683386639124607</string>
    <string name="tasbeeh_banner">525695824893690_830187221111214</string>
    <string name="bookmark_banner">525695824893690_830187627777840</string>
    <string name="qibla_banner">525695824893690_830188001111136</string>
    <string name="shahada_banner">525695824893690_830189334444336</string>
    <string name="homepage_banner_ad">525695824893690_682824135847524</string>
    <string name="mistakes">Mistakes</string>
    <string name="faraiz">Faraiz</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="required">Required</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_not_match">Password does not match.</string>
    <string name="allow_storage_access">Please allow storage access to download and listen recordings.</string>
    <string name="email_address" translatable="false">mirfatif@gmail.com</string>
</resources>