<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".prayer.fragments.PrayerTimesFragment">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40mdp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/roboto_light"
        android:gravity="center|center_vertical"
        android:paddingLeft="10dp"
        android:text="Prayer Times"
        android:textColor="@color/white"
        android:textSize="@dimen/_16mdp" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/space"
            tools:context=".prayer.fragments.PrayerTimesFragment">

            <include layout="@layout/view_prayer_times" />

            <LinearLayout
                android:id="@+id/ramadan_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:text="@string/suhoor_dua"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sehri" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:layout_marginBottom="@dimen/space"
                    android:gravity="center_horizontal"
                    android:text="@string/prayer_sehri_en" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/prayer_sehri_translation" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_x2"
                    android:text="@string/iftar_dua"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iftar" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:layout_marginBottom="@dimen/space"
                    android:gravity="center_horizontal"
                    android:text="@string/prayer_iftar_en" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/prayer_iftar_translation" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
