<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="locale"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <LinearLayout

                    android:id="@+id/fajarCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/fajr" />

                    <TextView
                        android:id="@+id/fajr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Fajr" />

                    <ImageView
                        android:id="@+id/fajaricon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="15dp"
                        android:tag="0"
                        card_view:srcCompat="@drawable/volume"
                        android:layout_marginLeft="15dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <LinearLayout

                    android:id="@+id/sunriseCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/sunrise" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Sunrise" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <LinearLayout

                    android:id="@+id/zuhrCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/dhuhr" />

                    <TextView
                        android:id="@+id/dhuhr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Dhuhr" />

                    <ImageView
                        android:id="@+id/zuhricon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="15dp"
                        android:tag="1"
                        card_view:srcCompat="@drawable/volume"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <LinearLayout

                    android:id="@+id/asrCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/asr" />

                    <TextView
                        android:id="@+id/asr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Asr" />

                    <ImageView
                        android:id="@+id/asricon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="15dp"
                        android:tag="2"
                        card_view:srcCompat="@drawable/volume"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <LinearLayout

                    android:id="@+id/magribCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/maghrib" />

                    <TextView
                        android:id="@+id/maghrib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Maghrib" />

                    <ImageView
                        android:id="@+id/magribicon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="15dp"
                        android:tag="3"
                        card_view:srcCompat="@drawable/volume"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:visibility="gone">

                <LinearLayout

                    android:id="@+id/sunsetCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/sunset" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Sunset" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <LinearLayout

                    android:id="@+id/ishaCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/isha" />

                    <TextView
                        android:id="@+id/isha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="Isha" />

                    <ImageView
                        android:id="@+id/ishaicon"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="15dp"
                        android:tag="4"
                        card_view:srcCompat="@drawable/volume"
                        android:layout_marginLeft="15dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp"
                android:text="@string/button_alarm_on"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>